# talentry-ai

./: .gitignore  .hf_space_header.md  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  submission_metadata.yaml
.github/workflows/: ci.yml
configs/: README.txt  job_description.txt  redrob_signals_doc.txt  submission_spec.txt
data/: README.md
data/redrob_submission/: submission.csv  submission.xlsx
docs/: api.md  architecture.md  methodology.md  ui.md  user-guide.md
redrob-reinforcement-learning/: .gitignore  README.md  pyproject.toml
redrob-reinforcement-learning/configs/: grpo_qwen3_0p6b.yaml  grpo_smoke.yaml  job_description.txt
redrob-reinforcement-learning/data/processed/: train.jsonl
redrob-reinforcement-learning/docs/: architecture.md  methodology.md
redrob-reinforcement-learning/notebooks/: redrob_qwen_grpo.ipynb
redrob-reinforcement-learning/outputs/: eval_compare.json  eval_metrics.json  model_card.md
redrob-reinforcement-learning/scripts/: commit_and_push.sh  eval_compare.py  push_model_card.py
redrob-reinforcement-learning/src/redrob_rl/: __init__.py  dataset.py  env.py  plotting.py  reward.py  sft.py  train.py
scripts/: push_hf_space.py  push_hf_space.sh  serve.py
src/talentry/: __init__.py
src/talentry/api/: __init__.py  server.py
src/talentry/cli/: rank.py
src/talentry/core/: __init__.py  models.py
src/talentry/features/: __init__.py  builder.py  skill_match.py
src/talentry/io/: __init__.py  candidates.py  resume.py  schema.py  submission.py
src/talentry/nlp/: __init__.py  lexicons.py  tokenize.py
src/talentry/ranker/: __init__.py  engine.py  jd_parser.py  reasoning.py  scorer.py  semantic.py
src/talentry/resources/: __init__.py
src/talentry/signals/: __init__.py  behavioural.py  honeypot.py
tests/: test_engine.py  test_resume.py  test_schema.py  test_skill_match.py  test_submission.py  test_tokenize.py
ui/talentry-space/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
ui/talentry-space/src/: App.tsx  api.ts  styles.css  types.ts
ui/talentry-space/src/components/: BreakdownPanel.tsx  DownloadBar.tsx  Header.tsx  JdSummary.tsx  ResultsTable.tsx  ResumeUpload.tsx  RunPanel.tsx  SchemaDiff.tsx  SchemaPanel.tsx  useScrollIsolation.ts
ui/talentry-space/src/components/storytelling/: Scene3D.tsx  Storytelling.tsx
