[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "talentry-ai"
version = "1.0.0"
description = "Intelligent candidate discovery and ranking engine for the Redrob × Hack2Skill India Runs hackathon."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Williyam M", email = "williyam64@gmail.com" }]
keywords = ["hr-tech", "ranking", "retrieval", "nlp", "hackathon", "redrob"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "numpy>=1.24",
  "scikit-learn>=1.3",
  "rank_bm25>=0.2.2",
  "rapidfuzz>=3.6",
  "pyyaml>=6.0",
  "tqdm>=4.66",
  "orjson>=3.9",
  # Resume parsing — keeps the wheel tiny (no native deps).
  "pypdf>=4.3",
  # XLSX submission writer (the hackathon spec accepts CSV or XLSX).
  "openpyxl>=3.1",
]


[project.optional-dependencies]
api = ["fastapi>=0.110", "uvicorn[standard]>=0.27", "python-multipart>=0.0.9"]
dev = [
  "pytest>=8.0",
  "pytest-cov>=4.1",
  "ruff>=0.4",
  "black>=24.3",
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "python-multipart>=0.0.9",
]

[project.scripts]
talentry-rank = "talentry.cli.rank:main"
talentry-serve = "talentry.api.server:run"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"talentry" = ["resources/*.yaml", "resources/*.json"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-select = ["I", "B", "UP", "SIM"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
